DVK-1596 - Layer modal style fix (#1282)
* fix row height and spaces between

* admin fix

* break too long words

--- a/src/components/mapOverlays/LayerModal.css
+++ b/src/components/mapOverlays/LayerModal.css
@@ -74,7 +74,11 @@ ion-modal#layerModalContainer::part(content) {
 #layerModalContainer ion-item {
   --padding-start: 0;
   --inner-padding-end: 0;
-  --min-height: 30px;
+  --min-height: 34px;
+}
+
+#layerModalContainer ion-item .labelText {
+  white-space: normal;
 }
 
 #layerModalContainer ion-item .layer {
